criando a estrutura html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Previsão do Tempo</title>
 </head>
 <body>
+
+    <div class="container">
+        <div class="area-input">
+            <input type="text" name="busca" id="f_busca" placeholder="Buscar cidade">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <div class="infos">
+            <h2>Tempo em Rio de Janeiro</h2>
+            <p>30 °C</p>
+            <img src="" alt="">
+            <p>Algumas Nuvens</p>
+            <p>Umidade 62%</p>
+        </div>
+    </div>
     
     <script src="js/script.js"></script>
 </body>
