--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div class="container">
-        <input type="text" placeholder="Digite o nome da cidade">
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        <input class="input-cidade" type="text" placeholder="Digite o nome da cidade">
+        <button class="btn-busca"><i class="fa-solid fa-magnifying-glass"></i></button>
 
         <div class="infos">
             <h2 class="cidade">Tempo em Rio de Janeiro</h2>
