--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="temp">21°C</p>
             
             <div>
-                <img class="img-previsao" src="" alt="icone-info-tempo"> 
+                <img class="img-previsao" src="https://openweathermap.org/img/wn/02n.png" alt="icone-info-tempo"> 
                 <p class="texto-previsao">Nublado</p>
             </div>
             
